--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						somehow I can understand it, if only barely.</p>
 				</div>
 				<div class="item">
-					<img src="images/dog.jpg">
+					<img src="images/dog.jpg" alt="my dogs">
 				</div>
 			</div>
 		</section>
@@ -46,8 +46,8 @@
 			<h2>About Me</h2>
 			<div class="group">
 				<div class="item">
-					<p>Coding has always interested me because of the versatility. It's used in almost every professsion
-						in some capacity. You can solve issues that people are having all the way to creating art
+					<p>Coding has always interested me because of the versatility. It's used in almost every profession
+						in some capacity. You can solve issues that people are having to creating art
 						through it. It seems so fun!</p>
 
 					<p>Other than coding I like to play with my dogs Mattie and Korra. I love playing videogames, as
@@ -56,7 +56,7 @@
 
 				</div>
 				<div class="item">
-					<img src="images/eye.jpg">
+					<img src="images/eye.jpg" alt="my art">
 				</div>
 			</div>
 		</section>
@@ -65,12 +65,12 @@
 			<h2>Portfolio</h2>
 			<div class="group">
 				<div class="item">
-					<img src="images/lake.jpg">
+					<img src="images/lake.jpg" alt="a picture I took">
 					<h3>Project 1</h3>
 					<p>*Placeholder* View from the Tennessee River!</p>
 				</div>
 				<div class="item">
-					<img src="images/comp.jpg">
+					<img src="images/comp.jpg" alt="my computer setup">
 					<h3>Project 2</h3>
 					<p>*Placeholder* This is my current computer setup at home</p>
 				</div>
@@ -111,10 +111,11 @@
 		</section>
 		<!-- google map -->
 		<section class="map">
+			<h2>Location</h2>
 			<div class="item">
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104951.25968445902!2d-86.83087971081696!3d34.71206847332896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886214e0ce958d0f%3A0xbf00986c5a37b138!2sMadison%2C%20AL!5e0!3m2!1sen!2sus!4v1604958674878!5m2!1sen!2sus"
-					width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+					width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false"
 					tabindex="0"></iframe>
 			</div>
 		</section>
